samples/_failures_safe/1761258657_80b527_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79ce49ca.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
